; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_hfsc.c_hfsc_purge_queue.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_hfsc.c_hfsc_purge_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Qdisc = type { i32 }
%struct.hfsc_class = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Qdisc*, %struct.hfsc_class*)* @hfsc_purge_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hfsc_purge_queue(%struct.Qdisc* %0, %struct.hfsc_class* %1) #0 {
  %3 = alloca %struct.Qdisc*, align 8
  %4 = alloca %struct.hfsc_class*, align 8
  %5 = alloca i32, align 4
  store %struct.Qdisc* %0, %struct.Qdisc** %3, align 8
  store %struct.hfsc_class* %1, %struct.hfsc_class** %4, align 8
  %6 = load %struct.hfsc_class*, %struct.hfsc_class** %4, align 8
  %7 = getelementptr inbounds %struct.hfsc_class, %struct.hfsc_class* %6, i32 0, i32 0
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %5, align 4
  %12 = load %struct.hfsc_class*, %struct.hfsc_class** %4, align 8
  %13 = getelementptr inbounds %struct.hfsc_class, %struct.hfsc_class* %12, i32 0, i32 0
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %13, align 8
  %15 = call i32 @qdisc_reset(%struct.TYPE_5__* %14)
  %16 = load %struct.hfsc_class*, %struct.hfsc_class** %4, align 8
  %17 = getelementptr inbounds %struct.hfsc_class, %struct.hfsc_class* %16, i32 0, i32 0
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %17, align 8
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @qdisc_tree_decrease_qlen(%struct.TYPE_5__* %18, i32 %19)
  ret void
}

declare dso_local i32 @qdisc_reset(%struct.TYPE_5__*) #1

declare dso_local i32 @qdisc_tree_decrease_qlen(%struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
